# CMakeLearning

./: .gitignore  README.md
v1/: CMakeLists.txt  build_win.bat
v1/include/: head.h
v1/src/: add.cpp  div.cpp  main.cpp  mul.cpp  sub.cpp
v2/: CMakeLists.txt
v2/include/: calc.h  swap.h
v2/src/calc/: CMakeLists.txt  add.cpp  div.cpp  mul.cpp  sub.cpp
v2/src/tool/: CMakeLists.txt  swap.cpp
v2/test1/: CMakeLists.txt  calc_test.cpp
v2/test2/: CMakeLists.txt  swap_test.cpp
v3_uselib/: CMakeLists.txt
v3_uselib/include/: floor.h
v3_uselib/src/: floor.cpp  main.cpp
